Fixed mobile screen too small message

--- a/desktop.css
+++ b/desktop.css
@@ -11,7 +11,6 @@ html, body {
 }
 
 body {
-    user-select: none;
     background-color: white;
     color: black;
     font-family: Poppins, sans-serif;
@@ -19,6 +18,10 @@ body {
 
 a {
     text-decoration: none;
+}
+
+.mobile {
+    visibility: collapse;
 }
 
 .hbox {
